# obs-qsv-onevpl

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
obs-qsvonevpl/: CMakeLists.txt  obs-qsv-onevpl-encoder-internal.cpp  obs-qsv-onevpl-plugin-init.cpp
obs-qsvonevpl/helpers/: ext_buf_manager.hpp  hw_d3d11.cpp  qsv_params.hpp
